--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body{
     background-repeat: no-repeat;
     background-size: 100%;
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
     flex-direction: column;
     padding-top: 12%;
